Get the navigation collapsing correctly with and without javascript.

--- a/wdn/templates_3.0/css/content/basestyles.css
+++ b/wdn/templates_3.0/css/content/basestyles.css
@@ -1,5 +1,11 @@
 /* Base styles for the maincontent, overriding the css-reset */
 
+#wdn_content_wrapper {
+	
+	float:left;
+	}
+
+
 #maincontent {
 	text-align: left;
 	font: 71%/150% "Lucida Grande",Verdana,Arial;
