--- a/wdn/templates_3.0/css/content/titlegraphic.css
+++ b/wdn/templates_3.0/css/content/titlegraphic.css
@@ -1,5 +1,5 @@
 #titlegraphic {
-	margin:24px 0 8px 0;
+	margin:100px 0 8px 0;
     padding:0 6px;
 }
 #titlegraphic h1 {
