--- a/wdn/templates_3.0/css/navigation/navigation.css
+++ b/wdn/templates_3.0/css/navigation/navigation.css
@@ -9,6 +9,9 @@ Author: WDN
 */
 #wdn_navigation_bar {
 	z-index:100;
+    background: url(images/menuBGCenter.png) 0 bottom repeat-x;
+    position:absolute;
+    margin:0 8px 0 0;
 	}
 
 #navigation {
@@ -19,17 +22,22 @@ Author: WDN
     max-width: 1830px;
     clear: both;
     position:relative;
+    height:40px;
+    padding-bottom:24px;
 }
-
+#navigation ul ul li {
+	display:none;
+}
+#navigation ul ul li:first-child {
+	display:block;
+}
 #navigation ul
 {
 	margin:0 0 0 8px;
-	padding:0 0 15px 0;
+	padding:0 0 0 0;
     position: relative;
     clear:both;
-    overflow:auto;
-    background: url(images/menuBGCenter.png) 0 bottom repeat-x;
-    
+    overflow:auto;    
 }
 #wdn_navigation_wrapper{
     background: url(images/menuBGRight.png) right bottom no-repeat;
