--- a/wdn/templates_3.0/css/wrapper.css
+++ b/wdn/templates_3.0/css/wrapper.css
@@ -9,4 +9,7 @@
     -moz-border-radius:18px;
     -webkit-border-radius:18px;
     min-width:960px;
+ position:relative;
+
+ height:auto;
 }
